Added new Creative Tab.

--- a/src/main/resources/assets/testing/lang/en_us.json
+++ b/src/main/resources/assets/testing/lang/en_us.json
@@ -1,4 +1,5 @@
 {
     "item.testing.mangetout": "Mange tout",
-    "block.testing.condensed_mangetout": "Condensed Mangetout Block"
+    "block.testing.condensed_mangetout": "Condensed Mangetout Block",
+    "itemGroup.testing.complexgroup": "Mangetout Mania"
 }
