--- a/src/main/resources/assets/mangetoutmod/lang/en_us.json
+++ b/src/main/resources/assets/mangetoutmod/lang/en_us.json
@@ -1,5 +1,7 @@
 {
     "item.mangetoutmod.mangetout": "Mange tout",
     "block.mangetoutmod.condensed_mangetout": "Condensed Mangetout Block",
-    "itemGroup.mangetoutmod.complexgroup": "Mangetout Mania"
+    "itemGroup.mangetoutmod.complexgroup": "Mangetout Mania",
+    "item.mangetoutmod.crisp_mangetout": "Crisp Mangetout"
+
 }
