Added Mangetout Stalk and functionality (bad texture)

--- a/src/main/resources/assets/mangetoutmod/lang/en_us.json
+++ b/src/main/resources/assets/mangetoutmod/lang/en_us.json
@@ -11,7 +11,8 @@
     "item.mangetoutmod.mangetoutium_pickaxe": "Mangetoutium Pickaxe",
     "item.mangetoutmod.mangetoutium_shovel": "Mangetoutium Shovel",
     "item.mangetoutmod.mangetoutium_axe": "Mangetoutium Axe",
-    "item.mangetoutmod.mangetoutium_hoe": "Mangetoutium Hoe"
+    "item.mangetoutmod.mangetoutium_hoe": "Mangetoutium Hoe",
+    "block.mangetoutmod.mangetout_stalk": "Mangetout Stalk"
 
 
 
