Fully Implemented Mangetoutium Armour

--- a/src/main/resources/assets/mangetoutmod/lang/en_us.json
+++ b/src/main/resources/assets/mangetoutmod/lang/en_us.json
@@ -12,6 +12,10 @@
     "item.mangetoutmod.mangetoutium_shovel": "Mangetoutium Shovel",
     "item.mangetoutmod.mangetoutium_axe": "Mangetoutium Axe",
     "item.mangetoutmod.mangetoutium_hoe": "Mangetoutium Hoe",
+    "item.mangetoutmod.mangetoutium_helmet": "Mangetoutium Helmet",
+    "item.mangetoutmod.mangetoutium_chestplate": "Mangetoutium Chestplate",
+    "item.mangetoutmod.mangetoutium_leggings": "Mangetoutium Leggings",
+    "item.mangetoutmod.mangetoutium_boots": "Mangetoutium Boots",
     "block.mangetoutmod.mangetout_stalk": "Mangetout Stalk"
 
 
